--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,7 @@
         android:theme="@style/Theme.Retrofit"
         tools:targetApi="31">
         <activity
-            android:name=".ItemLayout"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".MainMenu"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +24,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".SpainLeague"
+            android:exported="false"/>
+
+        <activity
+            android:name=".PremiereLeague"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
